# friendly_data

./: .buildinfo  .gitignore  README.rst  advanced.html  cli.html  config-file.html  data-package.html  devnotes.html  genindex.html  hands-on.html  iamc-conversion.html  index.html  index_pdf.html  installation.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  registry.html  requirements-dev.txt  requirements-docs.txt  requirements-extras.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: publish.yml  pythonpackage.yml
_modules/: friendly_data_registry.html  index.html
_modules/friendly_data/: cli.html  converters.html  dpkg.html  helpers.html  iamc.html  io.html  metatools.html  registry.html  tseries.html  validate.html
_sources/: advanced.rst.txt  config-file.rst.txt  data-package.rst.txt  devnotes.rst.txt  iamc-conversion.rst.txt  index.rst.txt  index_pdf.rst.txt  intro.rst.txt
_sources/api/: api.rst.txt  external.rst.txt  registry.rst.txt
_sources/tutorial/: converters.rst.txt  example.rst.txt  registry-intro.rst.txt
_static/: documentation_options.js
_static/data/: flow_out_sum.csv  iamc.csv  technology.csv
api/: api.html  external.html  index-file.html  registry.html
dev/: filter-reqs.py  requirements-frictionless.patch  requirements-registry.patch
doc/: Makefile  advanced.rst  basic.rst  cli.rst  conf.py  config-file.rst  data-package.rst  devnotes.rst  ecosystem.txt  hands-on.rst  iamc-conversion.rst  index.rst  index_pdf.rst  installation.rst  intro.rst  metadata-google-dst-search.rst  overview.rst  registry.rst  trim-csv.awk
doc/_static/css/: custom.css
doc/api/: api.rst  external.rst  index-file.rst
doc/tutorial/: archive.rst  capacity_factor.csv  converters.rst  example.rst  iamc-conversion.rst  iamc.csv  metadata.rst  pandas.rst  registry-intro.rst
friendly_data/: __init__.py  __main__.py  _types.py  cli.py  converters.py  dpkg.py  helpers.py  iamc.py  io.py  metatools.py  registry.py  tseries.py  validate.py
friendly_data/doc/: __init__.py  __main__.py  dpkg_describe.template  entry.md.template  entry.rst.template  index.html.template  page.md.template  page.rst.template
sark/: __init__.py  __main__.py  _types.py  cli.py  converters.py  doctools.py  dpkg.py  helpers.py  io.py  metatools.py  tseries.py  validate.py
sark/doc/: __init__.py  __main__.py  entry.rst.template
testing/: conftest.py  test_bugreport.py  test_cli.py  test_converters.py  test_dpkg.py  test_helpers.py  test_iamc.py  test_io.py  test_metatools.py  test_registry.py  test_tseries.py  test_validate.py
testing/data/: datapackage.json  sample-ok.csv
testing/files/: datapackage.json
testing/files/alias_test/: flow_in.csv  index.yaml  resource_area.csv  resource_area_size.csv
testing/files/custom_registry/: config.yaml
testing/files/data/: sample-bad.csv
testing/files/iamc/: annual_cost_per_nameplate_capacity.csv  carriers.csv  config.yaml  emissions_per_flow_in.csv  flow_out_sum.csv  ghg.csv  index.yaml  mini.csv  (+2 more)
tutorial/: archive.html  converters.html  example.html  metadata.html  registry-intro.html
(+40 files in other folders)
