[project]
name = "SENTINEL-archive"
version = "0.1.dev0"
description = "A datapackage (https://frictionlessdata.io/specs/data-package/) implementation for the SENTINEL project."
repository = "https://github.com/sentinel-energy/sentinel-archive"
keywords = ["datapackage", "SENTINEL", "archive"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]

[dependencies]

[dev-dependencies]

[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4" ]
build-backend = "setuptools.build_meta"

# [tool.setuptools_scm]
# write_to = "sark/version.py"

[tool.pytest.ini_options]
# used for pytest>=6.0, see: https://github.com/pytest-dev/pytest/pull/7247
addopts = "-ra -q --cov=sark"
# --doctest-modules --doctest-continue-on-failure

[tool.coverage.run]
omit = ["sark/cli.py"]

# [tool.mypy]
# ignore_missing_imports = "True"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | _build
  | build
  | dist
  | .*\.egg-info

  # directories without python source files
  | testing/data
  | tmp
  | htmlcov
  | dsts
)/
'''
